Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5002

durable link should not create autodelete subscription queue by default

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.23
    • 0.25
    • C++ Client
    • None

    Description

      If you specify a link to be durable, by default the queue for the 0-10 path will be declared as autodelete (unless you also specify the link to be reliable).

      This isn't really meeting expectations, since restarting the broker will cause the queue to be deleted.

      If reliability is not specified and the link is durable, reliable should be implied. The subscription queue should only be autodelete if the link is neither reliable nor durable.

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: