QPID-5002: durable links are reliable by default; autodelete subscription queue specified only if neither durable nor reliable

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1504621 13f79535-47bb-0310-9956-ffa450edef68